test/scc/stmt/semantic-errors/029.a
029.t:4:9: error: a declaration may only be used within a block